<resources>
    <string name="app_name">DoShop</string>
    <string name="ButtonMisListas">Mis listas</string>
    <string name="ButtonMisGrupos">Mis grupos</string>
    <string name="ButtonCrearLista">Crear lista</string>
    <string name="ButtonQuitarLista">Quitar</string>
    <string name="ButtonBorrarGrupo">Borrar</string>
    <string name="ButtonCrearGrupo">Crear Grupo</string>
    <string name="ButtonVerEventos">VER EVENTOS</string>
    <string name="EditTextEmailLogin">Email</string>
    <string name="EditTextContraseñaLogin">Contraseña</string>
    <string name="ButtonCrearUsuario"> Crear Usuario </string>
    <string name="ButtonSignIn"> Sign in </string>
    <string name="ButtonInvitarUsuarios">Invitar Usuario</string>
    <string name="ButtonEditar">Editar</string>
    <string name="ButtonEiminar">Eliminar</string>
    <string name="EditTextNombreGrupo">Nombre grupo</string>
    <string name="Salir">Salir</string>
    <string name="EditTextNombreProducto">Nombre</string>
    <string name="EditTextPrecioProducto">Precio</string>
    <string name="EditTextDescripciónProducto">Descripción</string>
    <string name="ButtonSelecimagenProducto">BtnselImgProduct</string>
    <string name="ButtonCrearEvento">Crear Evento</string>
    <string name="EditTextNombreEvento">Nombre del evento</string>
    <string name="ButtonCerrarSesion">Cerrar sesión</string>
    <string name="ButtonNuevoEvento">NuevoEvento</string>
    <string name="ButtonEliminarGrupo">Eliminar Grupo</string>
    <string name="ButtonEditarGrupo">Editar Grupo</string>
    <string name="ButtonMasProductos"> Agregar Producto</string>
    <string name="ButtonAgregarProducto">Agregar producto</string>
    <string name="TextViewAgregandoProducto">Agregando nuevo producto</string>
    <string name="TextViewAgregarImagen">Agregar imagen</string>
    <string name="ButtonDetallesEvento">Detalles</string>
    <string name="ButtonLista">Lista</string>

</resources>
