<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginUsuario">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.ActionBar"
        app:titleTextColor="@color/titulo_toolbar"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

       <ImageView
          android:id="@+id/imageViewLogin"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:background="@drawable/logo_login"/>

    </LinearLayout>

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:hint="@string/EditTextEmailLogin"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:textSize="20sp"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:hint="@string/EditTextContraseñaLogin"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="20sp"
        android:autofillHints="password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/ButtonCrearUsuario" />

        <Button
            android:id="@+id/signin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:enabled="true"
            android:text="@string/ButtonSignIn" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
</LinearLayout>