<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbmcProduct">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAbmcProduct"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.ActionBar"
        app:titleTextColor="@color/titulo_toolbar" />

    <TextView
        android:id="@+id/textViewAgregandoProducto"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/TextViewAgregandoProducto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Nombre" />

            <EditText
                android:id="@+id/editTextPrecioProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Precio" />

            <TextView
                android:id="@+id/textViewAgregarImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextViewAgregarImagen" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="178dp"
                android:layout_height="137dp"
                android:foreground="@android:color/transparent"
                app:srcCompat="@drawable/image_products" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:ems="10"
        android:text="Descripción" />

    <Button
        android:id="@+id/buttonAgregarProducto"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonAgregarProducto" />

</LinearLayout>