<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#6880B6F1"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGrupoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvGrupoAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonVerLista"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/ButtonVerEventos"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/loGrupoAdmin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/bAgregarEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Agregar evento" />

            <Button
                android:id="@+id/buttonInvitarUsuario"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonInvitarUsuarios" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/buttonEditarGrupo"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/ButtonEditarGrupo"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/buttonEliminarGrupo"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/ButtonELiminarGrupo"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>